Update and rename report (1).md to ОтчетСахно.md

--- a/labs/lab03/report/ОтчетСахно.md
+++ b/labs/lab03/report/ОтчетСахно.md
@@ -93,7 +93,7 @@ Markdown. В качестве отчёта необходимо предоста
 При успешной компиляции должны сгенерироваться файлы report.pdf и report.docx.
 Откройте и проверьте корректность полученных файлов. (Рис. 2)
  
-![Рис. 3](study_2023-2024_arh-pc/labs/lab03/report/image/рис3.jpg){#fig:001 width=70%}
+![Рис. 3](study_2023-2024_arh-pc/labs/lab03/report/image/рис1.jpg)
  
 Удалил полученные файлы с использованием Makefile. Для этого ввел команду make clean (Рис. 4)
 ![Рис. 4](study_2023-2024_arh-pc/labs/lab03/report/image/рис4.jpg){#fig:001 width=70%}
